# postman-to-openapi

./: .gitignore  COPYRIGHT.md  Dockerfile  LICENSE.md  README.md  enrich_openapi_spec.py  options.json  postman_collection_to_openapi.py  pyproject.toml
.run/: app.run.xml
examples/: README.md
examples/gitlab/: README.md
examples/good_bank/: GoodBank.postman_collection.json  README.md
gitlab/: enriched_openapi.yaml  openapi.yaml
good_bank/: enriched_openapi.yaml  openapi.yaml
src/levo_postman/: __init__.py  app.py  asgi.py  enrich_openapi_spec.py  oas_to_postman.py  postman_collection_to_openapi.py
